pipeline/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfe-nofity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: main-container
        image: vidatec_nfe_notify_import
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "100m" 
            memory: "128Mi" 
          requests:
            cpu: "100m" 
            memory: "128Mi"
        ports:
        - containerPort: 6236
