pipeline/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nfe-nofity
spec:
  selector:
    app: web
  ports:
  - name: http
    port: 6236
