pipeline/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nfe-nofity-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nfe-nofity.sandbox.altmeyer.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nfe-nofity
            port:
              number: 6236
